[package]
name = "normal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "normal"
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata", "memo"] }
solana-program = "1.17.6"
pyth-client = "0.2.2"
bytemuck = { version = "1.4.0" }
borsh = "0.10.3"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.4"
thiserror = "1.0"
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
enumflags2 = "0.6.4"
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"
ahash = "=0.8.5"
byteorder = "1.4.3"

[dev-dependencies]
bytes = "1.2.0"
base64 = "0.13.0"
